crates/fe/tests/fixtures/cli_output/single_files/derive_trait_as_type_value.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 1824
expression: output
input_file: tests/fixtures/cli_output/single_files/derive_trait_as_type_value.fe
---
=== STDERR ===
errors in file://<project>/crates/fe/tests/fixtures/cli_output/single_files/derive_trait_as_type_value.fe

error[2-0006]: expected type item here
   ┌─ derive_trait_as_type_value.fe:13:20
   │
13 │ struct Holder { x: Eq }
   │                    ^^ expected type here, but found trait `Eq`


=== EXIT CODE: 1 ===
